# convmap

./: .gitignore  pyproject.toml
convmap/: __init__.py  cli.py  embedder.py  engine.py  persistence.py  query.py  types.py
convmap/importers/: __init__.py  csv_importer.py  jsonl.py
convmap/lenses/: __init__.py  density.py  drift.py  dtw.py  hdc.py  neighborhood.py  recluster.py  tda.py  topology.py
tests/: test_cli.py  test_engine.py  test_importers.py  test_lenses.py  test_persistence.py  test_query.py  test_topology_tda_dtw.py
