[project]
name = "convmap"
version = "0.1.0"
description = "Streaming conversation map with pluggable lenses"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
lenses = [
    "torchhd>=0.6",
    "giotto-tda>=0.6",
    "dtaidistance>=2.3",
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
